--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,18 +37,18 @@
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                                 <hr>
                             </div>
-                            <form class="user">
+                            <form class="user" action="" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                        placeholder="Name">
+                                    <input type="text" class="form-control form-control-user" id="name"
+                                        placeholder="Name" name="name">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        placeholder="Email Address">
+                                    <input type="email" class="form-control form-control-user" id="email"
+                                        placeholder="Email Address" name="email">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-user"
-                                        id="exampleInputPassword" placeholder="Password">
+                                    <input type="password" class="form-control form-control-user" id="password"
+                                        placeholder="Password" name="password">
                                 </div>
                                 <a href="/" class="btn btn-primary btn-user btn-block">
                                     Register Account
