router register, login and tampilan dashboard done

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,16 +42,21 @@
                                         <h1 class="h4 text-gray-900 mb-4">Point Of Sales</h1>
                                         <hr>
                                         <p>Welcome Back!</p>
+                                        <% if(loginMessage.length > 0){ %>
+                                            <div class="alert alert-danger" role="alert">
+                                                <%= loginMessage %>
+                                            </div>
+                                            <% } %>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" action="/" method="post">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address...">
+                                            <input type="email" class="form-control form-control-user" id="email"
+                                                aria-describedby="emailHelp" placeholder="Enter Email Address..."
+                                                name="email" required>
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                            <input type="password" class="form-control form-control-user" id="password"
+                                                placeholder="Password" name="password" required>
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -60,9 +65,9 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <a href="/dasboard" class="btn btn-primary btn-user btn-block">
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
                                     </form>
                                     <hr>
                                     <div class="text-center">
@@ -73,7 +78,7 @@
                                     </div>
                                     <div class="text-center">
                                         <hr>
-                                        <p>© 2022 Copyright By Herlambang Gunawan</p>
+                                        <span>Copyright &copy; RUBICAMP 2022</span>
                                         <hr>
                                     </div>
                                 </div>
