--- a/views/register.ejs
+++ b/views/register.ejs
@@ -54,7 +54,7 @@
                                     <label>Role :</label>
                                     <select id="role" name="role" class="form-control" required>
                                         <option value="" disabled selected>-- Pilih Role --</option>
-                                        <option>User</option>
+                                        <option>Operator</option>
                                         <option>Admin</option>
                                     </select>
                                 </div>
