route,partial, users done

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,10 +20,8 @@
     <!-- Custom styles for this template-->
     <link href="/assets/css/sb-admin-2.css" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css"> -->
-
     <!-- Custom styles for this page -->
-    <link href="/assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="/assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
 </head>
 
