--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -11,8 +11,8 @@
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
                     <div class="btn-group">
-                        <a href="#" class="btn btn-primary active" aria-current="page"><i class="fas fa-fw fa-plus"></i></a>
-                        <a href="#" class="btn btn-primary">Add</a>
+                        <a href="/users/add" class="btn btn-primary active" aria-current="page"><i class="fas fa-fw fa-plus"></i></a>
+                        <a href="/users/add" class="btn btn-primary">Add</a>
                     </div>
                 </div>
                 <div class="card-body">
