--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -40,7 +40,6 @@
 </div>
 
 <!-- Bootstrap core JavaScript-->
-<script src="/assets/vendor/jquery/jquery.min.js"></script>
 <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <!-- Core plugin JavaScript-->
@@ -54,7 +53,7 @@
 <script src="/assets/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
 <!-- Page level custom scripts -->
-<script src="/assets/js/demo/datatables-demo.js"></script>
+<!-- <script src="js/demo/datatables-demo.js"></script> -->
 
 </body>
 
