--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,6 +23,8 @@
     <!-- Custom styles for this page -->
     <link href="/assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
+    <script src="/assets/vendor/jquery/jquery.min.js"></script>
+
 </head>
 
 <body id="page-top">
