router delete, tampilan confirmdelete, repair add.ejs done

--- a/views/users/add.ejs
+++ b/views/users/add.ejs
@@ -39,12 +39,12 @@
                         <label for="role" class="col-sm-2 col-form-label">Role</label>
                         <div class="col-sm-10">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="role" id="operator" value="operator"
+                                <input class="form-check-input" type="radio" name="role" id="operator" value="Operator"
                                     checked>
                                 <label class="form-check-label" for="operator">Operator</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="role" id="admin" value="admin">
+                                <input class="form-check-input" type="radio" name="role" id="admin" value="Admin">
                                 <label class="form-check-label" for="admin">Admin</label>
                             </div>
                         </div>
