--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -63,7 +63,25 @@
                         render: function (data, type) {
                             return `
                             <a href="users/edit/${data}" class="btn btn-success btn-circle btn-edit"><i class="fas fa-fw fa-info"></i></a>
-                            <button type="button" dataid="${data}" class="btn btn-danger btn-circle btn-delete"><i class="fas fa-fw fa-trash"></i></button>
+                            <a href="users/delete/${data}" class="btn btn-danger btn-circle btn-delete" data-toggle="modal" data-target="#deleteModal${data}"><i class="fas fa-fw fa-trash"></i></a>
+                            
+                                <div class="modal fade" id="deleteModal${data}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel${data}" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel${data}">Delete Confirmation</h5>
+                                                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">×</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body">Are you sure, you want delete it?</div>
+                                                <div class="modal-footer">
+                                                    <button class="btn btn-secondary" type="button" data-dismiss="modal">No</button>
+                                                    <a class="btn btn-primary" href="/users/delete/${data}">Yes</a>
+                                                </div>
+                                            </div>
+                                    </div>
+                                </div>
                             `
                         }
                     }
