tampilan goods(list) done

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -77,9 +77,8 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">GOODS UTILITIES :</h6>
-                        <a class="collapse-item" href="#">Goods</a>
-                        <a class="collapse-item<%= path.startsWith('/units') ? ' active' : '' %>"
-                            href="/units">Units</a>
+                        <a class="collapse-item<%= path.startsWith('/goods') ? ' active' : '' %>" href="/goods">Goods</a>
+                        <a class="collapse-item<%= path.startsWith('/units') ? ' active' : '' %>" href="/units">Units</a>
                     </div>
                 </div>
             </li>
