--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -67,13 +67,13 @@
             </div>
 
             <!-- Nav Item - Goods Utilities Collapse Menu -->
-            <li class="nav-item<%= path.startsWith('/units') ? ' active' : '' %>">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+            <li class="nav-item<%= path.startsWith('/goods' == '/units') ? ' active' : '' %>">
+                <a class="nav-link collapsed" href="" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Goods Utilities</span>
                 </a>
-                <div id="collapseUtilities" class="collapse<%= path.startsWith('/units') ? ' show' : '' %>" aria-labelledby="headingUtilities"
+                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">GOODS UTILITIES :</h6>
