--- a/views/goods/add.ejs
+++ b/views/goods/add.ejs
@@ -8,7 +8,7 @@
 
 
         <div class="card">
-            <form action="" method="post">
+            <form action="" method="post" enctype="multipart/form-data">
                 <div class="card-header">
                     <h6 style="color: blue">Form add</h6>
                 </div>
@@ -38,21 +38,23 @@
                     <div class="mb-3 row">
                         <label for="purchaseprice" class="col-sm-2 col-form-label">Purchase price</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="purchaseprice" name="purchaseprice" value="0" required>
+                            <input type="text" class="form-control" id="purchaseprice" name="purchaseprice" value="0"
+                                required>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="sellingprice" class="col-sm-2 col-form-label">Selling Price</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="sellingprice" name="sellingprice" value="0" required>
+                            <input type="text" class="form-control" id="sellingprice" name="sellingprice" value="0"
+                                required>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="unit" class="col-sm-2 col-form-label">Unit</label>
                         <div class="col-sm-10">
-                            <select class="form-control" id="unit" name="unit">
+                            <select class="form-control" id="unit" name="unit" value="pieces">
                                 <option value="">--Select Unit--</option>
                                 <% units.forEach(item=> { %>
                                     <option value="<%= item.unit %>" <%=data.unit==item.unit ? " selected" : "" %>>
@@ -67,7 +69,8 @@
                         <label for="picture" class="col-sm-2 col-form-label">Picture</label>
                         <div class="col-sm-10">
                             <div class="custom-file mb-3">
-                                <input type="file" class="custom-file-input" id="picture" required>
+                                <input type="file" class="custom-file-input" id="picture" name="sampleFile"
+                                    accept="image/png, image/gif, image/jpeg" required>
                                 <label class="custom-file-label" for="picture">Choose file</label>
                                 <div class="invalid-feedback">Example invalid custom file feedback</div>
                             </div>
@@ -94,6 +97,13 @@
 
     </div>
     <!-- /.container-fluid -->
+
+    <script>
+        $('.custom-file-input').on('change', function () {
+            let sampleFile = $(this).val().split('\\').pop();
+            $(this).next('.custom-file-label').addClass("selected").html(sampleFile);
+        });
+    </script>
 
     </div>
     <!-- End of Main Content -->
