--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,7 @@
     <!-- Bootstrap core JavaScript-->
     <script src="/assets/vendor/jquery/jquery.min.js"></script>
     <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/javascripts/util.js"></script>
 
     <!-- Custom styles for this template-->
     <link href="/assets/css/sb-admin-2.css" rel="stylesheet">
