--- a/views/goods/edit.ejs
+++ b/views/goods/edit.ejs
@@ -10,44 +10,47 @@
         <div class="card">
             <form action="" method="post" enctype="multipart/form-data">
                 <div class="card-header">
-                    <h6 style="color: blue">Form add</h6>
+                    <h6 style="color: blue">Form edit</h6>
                 </div>
 
                 <div class="card-body">
                     <div class="mb-3 row">
                         <label for="barcode" class="col-sm-2 col-form-label">Barcode</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="barcode" name="barcode" required>
+                            <input type="text" class="form-control" id="barcode" name="barcode"
+                                value="<%= data.barcode %>" readonly>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="name" class="col-sm-2 col-form-label">Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="name" name="name" required>
+                            <input type="text" class="form-control" id="name" name="name" value="<%= data.name %>"
+                                required>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="stock" class="col-sm-2 col-form-label">Stock</label>
                         <div class="col-sm-10">
-                            <input type="number" class="form-control" id="stock" name="stock" value="0" required>
+                            <input type="number" class="form-control" id="stock" name="stock" value="<%= data.stock %>"
+                                required>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="purchaseprice" class="col-sm-2 col-form-label">Purchase price</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="purchaseprice" name="purchaseprice" value="0"
-                                required>
+                            <input type="text" class="form-control" id="purchaseprice" name="purchaseprice"
+                                value="<%= data.purchaseprice %>" required>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="sellingprice" class="col-sm-2 col-form-label">Selling Price</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="sellingprice" name="sellingprice" value="0"
-                                required>
+                            <input type="text" class="form-control" id="sellingprice" name="sellingprice"
+                                value="<%= data.sellingprice %>" required>
                         </div>
                     </div>
 
@@ -55,7 +58,9 @@
                         <label for="unit" class="col-sm-2 col-form-label">Unit</label>
                         <div class="col-sm-10">
                             <select class="form-control" id="unit" name="unit" required>
-                                <option value="">--Select Unit--</option>
+                                <option value="<% data.unit %>">
+                                    <% data.unit %>
+                                </option>
                                 <% units.forEach(item=> { %>
                                     <option value="<%= item.unit %>" <%=data.unit==item.unit ? " selected" : "" %>>
                                         <%= item.name %>
@@ -74,6 +79,14 @@
                                 <label class="custom-file-label" for="picture">Choose file</label>
                                 <div class="invalid-feedback">Example invalid custom file feedback</div>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label for="picture" class="col-sm-2 col-form-label">Preview</label>
+                        <div class="col-sm-10">
+                            <img src="/images/uploadgoods/<%= data.picture %>" class="img-thumbnail" alt="" width="300"
+                                height="auto" />
                         </div>
                     </div>
                 </div>
