--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -68,7 +68,7 @@
             </div>
 
             <!-- Nav Item - Goods Utilities Collapse Menu -->
-            <li class="nav-item<%= path.startsWith('/goods' == '/units') ? ' active' : '' %>">
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
