--- a/views/goods/list.ejs
+++ b/views/goods/list.ejs
@@ -5,7 +5,7 @@
 
         <!-- Page Heading -->
         <h1 class="h3 mb-2 text-gray-800">Goods</h1>
-        <p class="mb-4">This is data of Units</p>
+        <p class="mb-4">This is data of Goods</p>
 
         <!-- DataTables Goods -->
         <div class="card shadow mb-4">
@@ -102,7 +102,7 @@
                                                     <div class="modal-body">Are you sure, you want delete it?</div>
                                                     <div class="modal-footer">
                                                         <button class="btn btn-secondary" type="button" data-dismiss="modal">No</button>
-                                                        <a class="btn btn-primary" href="/units/delete/${data}">Yes</a>
+                                                        <a class="btn btn-primary" href="/goods/delete/${data}">Yes</a>
                                                     </div>
                                                 </div>
                                         </div>
