--- a/views/goods/add.ejs
+++ b/views/goods/add.ejs
@@ -79,17 +79,19 @@
                 </div>
 
                 <div class="card-footer">
-                    <div class="btn-group">
-                        <button type="submit" class="btn btn-primary active" aria-current="page"><i
-                                class="fas fa-fw fa-database"></i></button>
-                        <button type="submit" class="btn btn-primary">Save</button>
-                    </div>
+                    <button type="submit" class="btn btn-primary btn-icon-split">
+                        <span class="icon text-white-50">
+                            <i class="fas fa-fw fa-database"></i>
+                        </span>
+                        <span class="text">Save</span>
+                    </button>
 
-                    <div class="btn-group">
-                        <a href="/goods" class="btn btn-warning active" aria-current="page"><i
-                                class="fas fa-undo"></i></a>
-                        <a href="/goods" class="btn btn-warning">Back</a>
-                    </div>
+                    <a href="/goods" class="btn btn-warning btn-icon-split">
+                        <span class="icon text-white-50">
+                            <i class="fas fa-undo"></i>
+                        </span>
+                        <span class="text">Back</span>
+                    </a>
                 </div>
 
             </form>
