--- a/views/goods/list.ejs
+++ b/views/goods/list.ejs
@@ -10,11 +10,12 @@
         <!-- DataTables Goods -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <div class="btn-group">
-                    <a href="/goods/add" class="btn btn-primary active" aria-current="page"><i
-                            class="fas fa-fw fa-plus"></i></a>
-                    <a href="/goods/add" class="btn btn-primary">Add</a>
-                </div>
+                <a href="/goods/add" class="btn btn-primary btn-icon-split">
+                    <span class="icon text-white-50">
+                        <i class="fas fa-fw fa-plus"></i>
+                    </span>
+                    <span class="text">Add</span>
+                </a>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
