--- a/views/units/edit.ejs
+++ b/views/units/edit.ejs
@@ -17,14 +17,16 @@
                     <div class="mb-3 row">
                         <label for="unit" class="col-sm-2 col-form-label">Unit</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="unit" name="unit" value="<%= data.unit %>" readonly>
+                            <input type="text" class="form-control" id="unit" name="unit" value="<%= data.unit %>"
+                                readonly>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="name" class="col-sm-2 col-form-label">Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="name" name="name" value="<%= data.name %>" required>
+                            <input type="text" class="form-control" id="name" name="name" value="<%= data.name %>"
+                                required>
                         </div>
                     </div>
 
@@ -37,17 +39,19 @@
                 </div>
 
                 <div class="card-footer">
-                    <div class="btn-group">
-                        <button type="submit" class="btn btn-primary active" aria-current="page"><i
-                                class="fas fa-fw fa-database"></i></button>
-                        <button type="submit" class="btn btn-primary">Save</button>
-                    </div>
+                    <button type="submit" class="btn btn-primary btn-icon-split">
+                        <span class="icon text-white-50">
+                            <i class="fas fa-fw fa-database"></i>
+                        </span>
+                        <span class="text">Save</span>
+                    </button>
 
-                    <div class="btn-group">
-                        <a href="/units" class="btn btn-warning active" aria-current="page"><i
-                                class="fas fa-undo"></i></a>
-                        <a href="/units" class="btn btn-warning">Back</a>
-                    </div>
+                    <a href="/units" class="btn btn-warning btn-icon-split">
+                        <span class="icon text-white-50">
+                            <i class="fas fa-undo"></i>
+                        </span>
+                        <span class="text">Back</span>
+                    </a>
                 </div>
 
             </form>
