--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -35,12 +35,12 @@
                         <div class="col-sm-10">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="role" id="operator" value="Operator"
-                                    <%= data.role == 'Operator' ? 'checked' : '' %>>
+                                    <%=data.role=='Operator' ? 'checked' : '' %>>
                                 <label class="form-check-label" for="operator">Operator</label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="role" id="admin" value="Admin"
-                                    <%= data.role == 'Admin' ? 'checked' : '' %>>
+                                    <%=data.role=='Admin' ? 'checked' : '' %>>
                                 <label class="form-check-label" for="admin">Admin</label>
                             </div>
                         </div>
@@ -48,17 +48,19 @@
                 </div>
 
                 <div class="card-footer">
-                    <div class="btn-group">
-                        <button type="submit" class="btn btn-primary active" aria-current="page"><i
-                                class="fas fa-fw fa-database"></i></button>
-                        <button type="submit" class="btn btn-primary">Save</button>
-                    </div>
+                    <button type="submit" class="btn btn-primary btn-icon-split">
+                        <span class="icon text-white-50">
+                            <i class="fas fa-fw fa-database"></i>
+                        </span>
+                        <span class="text">Save</span>
+                    </button>
 
-                    <div class="btn-group">
-                        <a href="/users" class="btn btn-warning active" aria-current="page"><i
-                                class="fas fa-undo"></i></a>
-                        <a href="/users" class="btn btn-warning">Back</a>
-                    </div>
+                    <a href="/users" class="btn btn-warning btn-icon-split">
+                        <span class="icon text-white-50">
+                            <i class="fas fa-undo"></i>
+                        </span>
+                        <span class="text">Back</span>
+                    </a>
                 </div>
 
             </form>
