--- a/views/suppliers/list.ejs
+++ b/views/suppliers/list.ejs
@@ -49,7 +49,7 @@
     <script>
         $(document).ready(function () {
             $('#dataTable').DataTable({
-                "lengthMenu": [[3, 10, 100, -1], [3, 10, 100]],
+                "lengthMenu": [[3, 10, 100], [3, 10, 100]],
                 "processing": true,
                 "serverSide": true,
                 "ajax": "/suppliers/tablesupplier",
