--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,6 +30,8 @@
     <!-- Custom styles for this page -->
     <link href="/assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
+    <script type="text/javascript" src="/javascripts/moment.js"></script>
+
 
 </head>
 
