router purchases, tampilan add purchases done

--- a/views/purchases/list.ejs
+++ b/views/purchases/list.ejs
@@ -67,7 +67,7 @@
                             return currencyFormatter.format(data)
                         }
                     },
-                    { "data": "supplier" },
+                    { "data": "name" },
                     {
                         data: "invoice",
                         orderable: false,
