--- a/views/purchases/form.ejs
+++ b/views/purchases/form.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header')%>
+<%- include('../partials/header') %>
 
     <!-- Begin Page Content -->
     <div class="container-fluid">
@@ -74,28 +74,29 @@
                 </form>
             </div>
             <hr>
-            <table id="detail-table" class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>No.</th>
-                        <th>Barcode</th>
-                        <th>Name</th>
-                        <th>Qty</th>
-                        <th>Price</th>
-                        <th>Total Price</th>
-                    </tr>
-                </thead>
-                <tbody>
+            <form action="" method="post">
+                <table id="detail-table" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>No.</th>
+                            <th>Barcode</th>
+                            <th>Name</th>
+                            <th>Qty</th>
+                            <th>Price</th>
+                            <th>Total Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
 
-            <div class="card-footer">
-                <form>
+                <div class="card-footer">
+
                     <div class="row mb-3">
                         <label for="totalsum" class="col-sm-2 col-form-label">Total Summary</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="totalsum" value="<%= purchases.totalsum %>"
+                            <input type="text" class="form-control" id="totalsum" name="totalsum" value="<%= purchases.totalsum %>"
                                 readonly>
                         </div>
                     </div>
@@ -126,14 +127,82 @@
                         </span>
                         <span class="text">Back</span>
                     </a>
-                </form>
-            </div>
+            </form>
         </div>
+    </div>
 
     </div>
     <!-- /.container-fluid -->
 
+    <script>
+        let invoice = '<%= purchases.invoice %>';
+
+        $(document).ready(function () {
+            readDetails()
+            //munculin detail barang ketika dipiih barcode
+            $('#barcode').change(function () {
+                const barcode = $(this).val()
+                $.get(`/purchases/goods/${barcode}`).done(function (data) {
+                    $('#name').val(data.name)
+                    $('#stock').val(data.stock)
+                    $('#purchaseprice').val(data.purchaseprice)
+                    $('#quantity').val(0)
+                    $('#totalprice').val(data.totalprice)
+                })
+            })
+
+            $('#quantity').keyup(function () {
+                const quantity = $(this).val()
+                const purchaseprice = $('#purchaseprice').val()
+                $('#totalprice').val(currencyFormatter.format(purchaseprice * quantity))
+            })
+
+            $('#detail-form').submit(function (e) {
+                e.preventDefault();
+                const itemcode = $('#barcode').val()
+                const quantity = $('#quantity').val()
+                $.post('/purchases/additem', { invoice, itemcode, quantity }).done(function (data) {
+                    readDetails()
+                    $('#totalsum').val((data.totalsum))
+                })
+            })
+
+        });
+
+        const readDetails = () => {
+            $.get(`/purchases/details/${invoice}`).done(function (data) {
+                let html = ''
+                data.forEach((item, index) => {
+                    html += `
+                    <tr>
+                        <td>
+                            ${index + 1}
+                        </td>
+                        <td>
+                            ${item.itemcode}
+                        </td>
+                        <td>
+                            ${item.name}
+                        </td>
+                        <td>
+                            ${item.quantity}
+                        </td>
+                        <td>
+                            ${currencyFormatter.format(item.purchaseprice)}
+                        </td>
+                        <td>
+                            ${currencyFormatter.format(item.totalprice)}
+                        </td>
+                        
+                    </tr>
+                    `
+                })
+                $('#detail-table tbody').html(html)
+            })
+        }
+    </script>
+
     </div>
     <!-- End of Main Content -->
 
-    <%- include('../partials/footer')%>
+    <%- include('../partials/footer') %>
