--- a/views/purchases/form.ejs
+++ b/views/purchases/form.ejs
@@ -97,13 +97,14 @@
                         <label for="totalsum" class="col-sm-2 col-form-label">Total Summary</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="totalsum" name="totalsum"
-                                value="<%= purchases.totalsum %>" readonly>
+                                value="<%= new Intl.NumberFormat('id', { style: 'currency', currency: 'IDR' }).format(purchases.totalsum) %>"
+                                readonly>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="supplier" class="col-sm-2 col-form-label">Supplier</label>
                         <div class="col-sm-10">
-                            <select type="text" class="form-control" id="supplier" name="supplier">
+                            <select type="text" class="form-control" id="supplier" name="supplier" required>
                                 <option value="<%= purchases.supplier %>">
                                     <%= purchases.name %>
                                 </option>
