--- a/views/purchases/form.ejs
+++ b/views/purchases/form.ejs
@@ -196,7 +196,7 @@
                                 ${currencyFormatter.format(item.totalprice)}
                             </td>
                             <td>
-                                <a href="purchases/deleteitems/${item.id}" class="btn btn-danger btn-circle btn-delete" data-toggle="modal" data-target="#deleteModal${item.id}"><i class="fas fa-fw fa-trash"></i></a>
+                                <a href="purchases/deleteitems/${item.id}" class="btn btn-danger btn-circle btn-delete" data-toggle="modal" data-target="#deleteModal${item.id}"><i class="fas fa-trash"></i></a>
                                 
                                 <div class="modal fade" id="deleteModal${item.id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel${item.id}" aria-hidden="true">
                                     <div class="modal-dialog" role="document">
