--- a/views/suppliers/list.ejs
+++ b/views/suppliers/list.ejs
@@ -63,8 +63,8 @@
                         orderable: false,
                         render: function (data, type) {
                             return `
-                            <a href="suppliers/edit/${data}" class="btn btn-success btn-circle btn-edit"><i class="fas fa-fw fa-info"></i></a>
-                            <a href="suppliers/delete/${data}" class="btn btn-danger btn-circle btn-delete" data-toggle="modal" data-target="#deleteModal${data}"><i class="fas fa-fw fa-trash"></i></a>
+                            <a href="suppliers/edit/${data}" class="btn btn-info btn-circle btn-edit"><i class="fas fa-info-circle"></i></a>
+                            <a href="suppliers/delete/${data}" class="btn btn-danger btn-circle btn-delete" data-toggle="modal" data-target="#deleteModal${data}"><i class="fas fa-trash"></i></a>
                             
                                 <div class="modal fade" id="deleteModal${data}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel${data}" aria-hidden="true">
                                     <div class="modal-dialog" role="document">
