--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -97,9 +97,9 @@
 
             </li>
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" aria-expanded="true" aria-controls="collapseCostumers">
+                <a class="nav-link collapsed" href="#" aria-expanded="true" aria-controls="collapseCustomers">
                     <i class="fas fa-fw fa-users"></i>
-                    <span>Costumers</span>
+                    <span>Customers</span>
                 </a>
             </li>
 
