--- a/views/customers/list.ejs
+++ b/views/customers/list.ejs
@@ -10,7 +10,7 @@
         <!-- DataTables Customers -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <a href="/suppliers/add" class="btn btn-primary btn-icon-split">
+                <a href="/customers/add" class="btn btn-primary btn-icon-split">
                     <span class="icon text-white-50">
                         <i class="fas fa-fw fa-plus"></i>
                     </span>
