--- a/views/customers/edit.ejs
+++ b/views/customers/edit.ejs
@@ -4,34 +4,37 @@
     <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Suppliers</h1>
+        <h1 class="h3 mb-2 text-gray-800">Customers</h1>
 
 
         <div class="card">
             <form action="" method="post">
                 <div class="card-header">
-                    <h6 style="color: blue">Form add</h6>
+                    <h6 style="color: blue">Form edit</h6>
                 </div>
 
                 <div class="card-body">
                     <div class="mb-3 row">
                         <label for="name" class="col-sm-2 col-form-label">Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="name" name="name" required>
+                            <input type="text" class="form-control" id="name" name="name" value="<%= data.name %>"
+                                required>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="address" class="col-sm-2 col-form-label">Address</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="address" name="address" rows="3"></textarea>
+                            <textarea class="form-control" id="address" name="address"
+                                rows="3"><%= data.address %></textarea>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label for="phone" class="col-sm-2 col-form-label">Phone</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="phone" name="phone" required>
+                            <input type="text" class="form-control" id="phone" name="phone" value="<%= data.phone %>"
+                                required>
                         </div>
                     </div>
                 </div>
@@ -44,7 +47,7 @@
                         <span class="text">Save</span>
                     </button>
 
-                    <a href="/suppliers" class="btn btn-warning btn-icon-split">
+                    <a href="/customers" class="btn btn-warning btn-icon-split">
                         <span class="icon text-white-50">
                             <i class="fas fa-undo"></i>
                         </span>
