--- a/views/users/add.ejs
+++ b/views/users/add.ejs
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="card-footer">
-                    <button type="submit" class="btn btn-primary btn-icon-split">
+                    <button type="submit" class="btn btn-success btn-icon-split">
                         <span class="icon text-white-50">
                             <i class="fas fa-fw fa-database"></i>
                         </span>
